--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
-    - name: Run tests
-      run: mix test
+    - name: Run Tests
+      run: mix coveralls.json
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
 
