Ref: https://github.com/dwyl/phoenix-liveview-stopwatch/pull/117

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,7 @@ jobs:
     - name: Run Tests
       run: mix coveralls.json
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
 
